# Kodiak-Copilot

./: .envrc  .gitignore  README.md  poetry.toml  pyproject.toml  tox.ini
src/brightai/template/: __version__.py  main.py  py.typed
tests/: test_template.py
